# libpng

./: .clang-format  .gitattributes  .gitignore  BUILD.bat  CMakeLists.txt  CMakePresets.json  README.md  build.proj  cpm.json  png.sln
docs/: libpng-manual.md
examples/: example.c  iccfrompng.c  pngpixel.c  pngtopng.c  simpleover.c
examples/example/: example.vcxproj
examples/visupng/: PngFile.c  PngFile.cpp  PngFile.h  VisualPng.c  VisualPng.cpp  VisualPng.rc
extras/tools/: README.md  checksum-icc.c  cvtcolor.c  genpng.c  makesRGB.c  png-fix-itxt.c  pngcp.c  pngfix.c
fab/: configure
fab/msc/: build.proj  common.props  png.vcxproj  png.vcxproj.filters  pngimage.vcxproj  pngstest.vcxproj  pngtest.vcxproj  pngunknown.vcxproj  pngvalid.vcxproj  pngvalid.vcxproj.filters
fab/msc/examples/: example.vcxproj  iccfrompng.vcxproj  pngpixel.vcxproj  pngtopng.vcxproj  simpleover.vcxproj  visupng.vcxproj  visupng.vcxproj.filters
fab/msc/tools/: checksum-icc.vcxproj  cvtcolor.vcxproj  genpng.vcxproj  makesRGB.vcxproj  png-fix-itxt.vcxproj  pngcp.vcxproj  pngfix.vcxproj
include/: pngconf.h  pngerror.h  pnginfo.h  pngmem.h  pngpriv.h  pngstruct.h  rutil.h  trans.h  wutil.h
include/png/: libconf.h  png.h  pngconf.h
src/: CMakeLists.txt  png.c  png.cpp  png.vcxproj.filters  pngerror.c  pngerror.cpp  pngget.c  pngget.cpp  pngmem.c  pngmem.cpp  pngpread.c  pngpread.cpp  pngread.c  pngread.cpp  pngrio.c  pngrio.cpp  pngrtran.c  pngrtran.cpp  pngrutil.c  pngrutil.cpp  pngset.c  pngset.cpp  pngstest.c  pngtrans.cpp  pngvalid.c  pngwio.c  pngwio.cpp  pngwrite.c  pngwrite.cpp  pngwtran.cpp  pngwutil.c  pngwutil.cpp
src/arm/: CMakeLists.txt
src/intel/: CMakeLists.txt  filter_sse2_intrinsics.c  intel_init.c
src/powerpc/: CMakeLists.txt
tests/: pngimage.c  pngstest.c  pngtest-all  pngtest-all.bat  pngtest.c  pngunknown.c  pngvalid.cpp
