target_sources(png PRIVATE
  png.cpp
  pngerror.cpp
  pngget.cpp
  pngmem.cpp
  pngpread.cpp
  pngread.cpp
  pngrio.cpp
  pngrtran.cpp
  pngrutil.cpp
  pngset.cpp
  pngtrans.cpp
  pngwio.cpp
  pngwrite.cpp
  pngwtran.cpp
  pngwutil.cpp
)
add_subdirectory(arm)
add_subdirectory(powerpc)
add_subdirectory(intel)